# quadprog_test

./: CMakeLists.txt  README.md
examples/: main.c  main.h
matlab_code/: test_quadp.m
src/: buildInfo.mat  defines.txt  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  test_quadp.c  test_quadp.h  test_quadp_types.h
